# Applied-Data-Science

./: .gitignore  Applied Data Science with Python.docx  README.md  pyproject.toml
.ipynb_checkpoints/: Lecture 1 - Basics (Class)-checkpoint.ipynb  Lecture 1 - Basics (Exercise)-checkpoint.ipynb  Lecture 2 - Python Data Structures (Exercise)-checkpoint.ipynb
Codes/All original lectures/: Lecture 2.ipynb  Lecture 3.ipynb  data.csv  data.txt
Codes/Lecture 01/: Lecture 1 - Basics (Class).ipynb  Lecture 1 - Basics (Exercise).ipynb
Codes/Lecture 02/: Lecture 2 - Python Data Structures (Class).ipynb  Lecture 2 - Python Data Structures (Exercise).ipynb
Codes/Lecture 03/: test_file_2.csv  weather.csv
Codes/Lecture 04/: Lecture 4.ipynb  Tasks_LV.ipynb  stats.txt  test_assignment_data.csv
Codes/Lecture 06/: Lecture 6 - Assignment - Lukas Varga.ipynb  Lecture 6 - My Notes.ipynb  Lecture 6 - Solution.ipynb  Lecture 6 activity walk through.ipynb
Codes/Lecture 07/: Module 2-1 - Support Vector Machine.ipynb
Codes/Lecture 08 - Scikit-learn/: Module 8  walkthrough.ipynb  fakenews.ipynb
Codes/Lecture 09 - Web Scraping/: Lecture 9.ipynb
Codes/Lecture 10 - Databases/: Databases.ipynb  Istvan_data.xlsx  istvan_data.db  my_app.sqlite
NVIDIA RAPIDS/Assessment/: 3-01_intro.ipynb  3-02_find_infected.ipynb  3-03_nearest_facilities.ipynb  3-04_identify_risk_factors.ipynb  data_sources
OTH - Twitter Data Analysis/: 01_sentiment_res.csv  02_top10_hashtags.csv  02_top10_users.csv  03_followers.csv  04_profiles.csv  04_tweets.csv  twitter_varga.ipynb  twitter_varga.py
(+70 files in other folders)
